# blob-svc

./: .env  Cargo.toml  Config.toml
src/: main.rs
src/assets/: mod.rs
src/assets/migrations/: blobs.sql
src/config/: mod.rs
src/data/: mod.rs
src/data/pg/: mod.rs
src/handlers/: mod.rs
src/handlers/response/: mod.rs
src/router/: mod.rs
