[package]
name = "user-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2" 
pretty_env_logger = "0.4"
bytes = "1.3.0"
serde_json = "1.0.91"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
http = "0.2.8"
serde = "1.0.152"
dotenv = "0.15.0"
config = "0.13.3"
regex = "1.7.1"
